--- a/public/styles.css
+++ b/public/styles.css
@@ -65,6 +65,7 @@ main {
   overflow-y: auto;
   overflow-x: hidden;
   width: 100%;
+  justify-content: space-between;
 }
 
 .readings-grid {
@@ -245,9 +246,12 @@ footer {
   position: relative;
   width: 90%;
   height: auto;
-  margin: 1rem auto;
+  margin: auto auto;
   max-width: 252px;
   align-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .fan-control {
